--- a/vocab-builder/frontend/package.json
+++ b/vocab-builder/frontend/package.json
@@ -17,7 +17,9 @@
     "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0"
+    "@quasar/app": "^1.0.0",
+    "@quasar/quasar-app-extension-testing": "^1.0.0",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.0"
   },
   "engines": {
     "node": ">= 10.18.1",
